--- a/index.html
+++ b/index.html
@@ -362,6 +362,21 @@
                         </li>
                     </ul>
                 </div>
+                <div class="footer-form">
+                    <p class="form-title">Підпишіться на розсилку</p>
+                    <form class="footer-form-email">
+                        <label class="form-email">
+                            <input type="email" name="email" placeholder="E-mail" />
+                        </label>
+                
+                        <button class="footer-button" type="submit">
+                            Підписатися
+                            <svg class="icon-send" width="24px" height="24px">
+                                <use xlink:href="./images/sprite.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                    </form>
+                </div>
         </div>
     </footer>
    
